2.3.14 (2016-MM-DD)
-------------------

New features
 - [eas] added folder merging capabilities

Enhancements
 - [web] expunge drafts mailbox when a draft is sent and deleted
 - [web] updated CKEditor to version 4.5.10

Bug fixes
 - [eas] fixed long GUID issue preventing sometimes synchronisation (#3460)
 - [web] improved extraction of HTML signature in Preferences module
 - [web] really delete mailboxes being deleted from the Trash folder (#595, #1189, #641)
 - [core] fixing sogo-tool backup with multi-domain configuration but domain-less logins
 - [core] during event scheduling, use 409 instead of 403 so Lightning doesn't fail silently
 - [core] correctly calculate recurrence exceptions when not overlapping the recurrence id
 - [core] prevent invalid SENT-BY handling during event invitations (#3759)

2.3.13 (2016-07-06)
-------------------

New features
 - [core] now possible to set default Sieve script (#2949)
 - [core] new sogo-tool truncate-calendar feature (#1513, #3141)
 - [eas] initial Out-of-Office support in EAS

Enhancements
 - [core] avoid showing bundle loading info when not needed (#3726)
 - [core] when restoring data using sogo-tool, regenerate Sieve script (#3029)
 - [eas] use the preferred email identity in EAS if valid (#3698)
 - [eas] handle inline attachments during EAS content generation
 - [web] update jQuery File Upload library to 9.12.5

Bug fixes
 - [web] fixed crash when an attachment filename has no extension
 - [web] dragging a toolbar button was blocking the mail editor in Firefox
 - [eas] handle base64 EAS protocol version

2.3.12 (2016-06-10)
-------------------

Enhancements
 - [web] updated CKEditor to version 4.5.9
 - [web] CKEditor: switched to the minimalist skin
 - [web] CKEditor: added the base64image plugin
 - [web] CKEditor: added the pastefromword plugin (#2295, #3313)
 - [web] added Turkish (Turkey) (tr_TR) translation - thanks to Sinan Kurşunoğlu

Bug fixes
 - [core] sanity checks for events with bogus timezone offsets